# memory-manager

./: .gitignore  justfile  pyproject.toml
src/memory_manager/: cli.py
tests/: test_cli.py
