[project]
name = "memory-manager"
version = "0.1.0"
description = "Canonical CLI for OpenCode persistent memory"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0.1",
    "typer>=0.12.3",
]

[project.scripts]
opencode-memory = "memory_manager.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/memory_manager"]
