[project]
name = "memory-manager"
version = "0.1.0"
description = "Canonical CLI for OpenCode persistent memory"
requires-python = ">=3.12"
dependencies = [
    "cyclopts>=3.14.1",
    "pydantic>=2.11.0",
    "pyyaml>=6.0.1",
]

[project.scripts]
opencode-memory = "memory_manager.cli:main"

[dependency-groups]
dev = [
    "basedpyright>=1.31.0",
    "pytest>=8.3.0",
    "ruff>=0.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/memory_manager"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "A"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.basedpyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
include = ["src", "tests"]
